Profile change and response maintain for each api
